--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,4 +1,7 @@
-﻿@model FiDa.DatabaseModels.Account
+﻿@model FiDa.ViewModels.BaseViewModel
+@{
+	var account = Model.Account;
+}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -27,15 +30,18 @@
 	<div class="flex min-h-full min-w-full">
 		<nav class="border-r-2 border-slate-600 h-screen min-w-72 p-6">
 			<div class="grid grid-cols-1 gap-2">
-				@foreach (var userHost in Model.ConfiguredHosts)
+				@foreach (var userHost in account.ConfiguredHosts)
 				{
 					<a key="@userHost.Host" href="@userHost.Host.ToString().ToLower()"
 				   class=" text-xl font-semibold hover:bg-slate-600 p-2 hover:cursor-pointer rounded-md active:ring-2 active:bg-slate-600 focus-within:bg-slate-600 focus-within:ring-2 ring-slate-200">
 						<div class="flex justify-between">
 							@userHost.Host.ToString()
-							<div class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-[#2563eb] text-[#f8fafc] hover:bg-[#2563eb]/80">
-								@userHost.Files.Count
-							</div>
+							@if (@userHost.Files != null)
+							{
+								<div class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-[#2563eb] text-[#f8fafc] hover:bg-[#2563eb]/80">
+									@userHost.Files.Count
+								</div>
+							}
 						</div>
 					</a>
 				}
@@ -55,7 +61,7 @@
 					<ul class="py-2 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdownDefaultButton">
 						@foreach (var host in (FiDa.DatabaseModels.Hosts[])Enum.GetValues(typeof(FiDa.DatabaseModels.Hosts)))
 						{
-							if (Model.ConfiguredHosts.FirstOrDefault((h) => h.Host == host) == null)
+							if (account.ConfiguredHosts.FirstOrDefault((h) => h.Host == host) == null)
 							{
 								<li>
 									<a href="/config/@host.ToString().ToLower()" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">@host.ToString()</a>
