--- a/Views/Dashboard/Index.cshtml
+++ b/Views/Dashboard/Index.cshtml
@@ -1,11 +1,16 @@
 ﻿@model FiDa.ViewModels.BaseViewModel
 @{
 	ViewData["Title"] = "Dashboard";
+
+	var currentUser = Model.Account;
 }
 
 <div class="min-w-full min-h-full space-y-5">
 	<div class="grid lg:grid-cols-3 md:grid-cols-2 grid-cols-1 gap-4 select-none">
-		<StorageUsage label="pCloud" totalSpace={10} usedSpace={9} nrOfFiles={100} imgSrc="/pCloud.jpg" />
+		@foreach (var host in currentUser.ConfiguredHosts)
+		{
+			@await Component.InvokeAsync("StorageUsage", new{host})
+		}
 	</div>
 	<div class="w-full px-4 h-1 bg-slate-600 rounded-full"></div>
 	<div class="py-2">
