--- a/Views/Dropbox/Index.cshtml
+++ b/Views/Dropbox/Index.cshtml
@@ -3,26 +3,31 @@
 	ViewData["Title"] = "Dropbox";
 
 	var fileModel = Model.FileViewModel ?? throw new ArgumentNullException("FileViewModel");
+	var host = Model.Account.ConfiguredHosts.FirstOrDefault(h => h.Host == FiDa.DatabaseModels.Hosts.Dropbox) ?? throw new ArgumentNullException("ConfiguredHost");
 	var rootFiles = fileModel.RootFiles;
 	var folders = fileModel.Folders;
 
 }
 <div class="p-4">
-	<div class="flex items-center space-x-2 pb-4">
-		<span class="text-5xl font-semibold">Dropbox</span>
-		<a class="hover:bg-gray-800 p-2 focus:ring-4 focus:outline-none focus:ring-gray-300 font-medium rounded-lg text-sm text-center dark:hover:bg-gray-700 dark:focus:ring-gray-800" id="sync" href="@Url.Action("SyncRepo","dropbox")">
-			<svg fill="currentColor" version="1.1" id="Uploaded to svgrepo.com" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-				 viewBox="0 0 32 32" xml:space="preserve" class="text-white" width="2rem" height="2rem">
-			<path d="M30,16c0,3.279-2.631,5.939-5.896,5.995l-0.629-0.001C23.22,25.905,19.975,29,16,29
-							c-2.464,0-4.634-1.201-6-3.036V27.5c0,0.276-0.224,0.5-0.5,0.5S9,27.776,9,27.5V24h3.5c0.276,0,0.5,0.224,0.5,0.5S12.776,25,12.5,25
-							h-1.955c1.157,1.798,3.162,3,5.455,3c3.418,0,6.222-2.653,6.475-6.008L9.528,21.974C9.515,21.817,9.5,21.66,9.5,21.5
-							c0-3.584,2.916-6.5,6.5-6.5c2.292,0,4.298,1.202,5.454,3H19.5c-0.276,0-0.5,0.224-0.5,0.5s0.224,0.5,0.5,0.5H23v-3.5
-							c0-0.276-0.224-0.5-0.5-0.5S22,15.224,22,15.5v1.528C20.634,15.195,18.462,14,16,14c-4.142,0-7.5,3.358-7.5,7.5
-							c0,0.16,0.01,0.316,0.022,0.473l-0.061,0C4.848,21.697,2,18.684,2,15c0-3.613,2.738-6.585,6.252-6.959C9.127,4.572,12.259,2,16,2
-							c4.418,0,8,3.582,8,8C27.314,10,30,12.686,30,16z" />
-					</svg>
-		</a>
+	<div class="flex items-center justify-between pb-4">
+		<div class="flex items-center space-x-2">
+			<span class="text-5xl font-semibold">Dropbox</span>
+			<a class="hover:bg-gray-800 p-2 focus:ring-4 focus:outline-none focus:ring-gray-300 font-medium rounded-lg text-sm text-center dark:hover:bg-gray-700 dark:focus:ring-gray-800" id="sync" href="@Url.Action("SyncRepo","dropbox")">
+				<svg fill="currentColor" version="1.1" id="Uploaded to svgrepo.com" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+					 viewBox="0 0 32 32" xml:space="preserve" class="text-white" width="2rem" height="2rem">
+					<path d="M30,16c0,3.279-2.631,5.939-5.896,5.995l-0.629-0.001C23.22,25.905,19.975,29,16,29
+									c-2.464,0-4.634-1.201-6-3.036V27.5c0,0.276-0.224,0.5-0.5,0.5S9,27.776,9,27.5V24h3.5c0.276,0,0.5,0.224,0.5,0.5S12.776,25,12.5,25
+									h-1.955c1.157,1.798,3.162,3,5.455,3c3.418,0,6.222-2.653,6.475-6.008L9.528,21.974C9.515,21.817,9.5,21.66,9.5,21.5
+									c0-3.584,2.916-6.5,6.5-6.5c2.292,0,4.298,1.202,5.454,3H19.5c-0.276,0-0.5,0.224-0.5,0.5s0.224,0.5,0.5,0.5H23v-3.5
+									c0-0.276-0.224-0.5-0.5-0.5S22,15.224,22,15.5v1.528C20.634,15.195,18.462,14,16,14c-4.142,0-7.5,3.358-7.5,7.5
+									c0,0.16,0.01,0.316,0.022,0.473l-0.061,0C4.848,21.697,2,18.684,2,15c0-3.613,2.738-6.585,6.252-6.959C9.127,4.572,12.259,2,16,2
+									c4.418,0,8,3.582,8,8C27.314,10,30,12.686,30,16z" />
+				</svg>
+			</a>
+		</div>
+		@await Component.InvokeAsync("DeleteHost", new{host})
 	</div>
+
 	<hr class="bg-slate-600 rounded-full h-2" />
 
 	<div class="relative overflow-x-auto py-4">
@@ -94,13 +99,12 @@
 			foreach (var err in errors)
 			{
 				<p class="p-2 text-red-400 font-semibold">@err</p>
-
 			}
 		}
 	</div>
 
 	<!-- Main modal -->
-	<div popover="manual" id="modal-content" class="m-auto p-4 w-full max-w-2xl max-h-full">
+	<dialog popover="manual" id="modal-content" class="m-auto p-4 w-full max-w-2xl max-h-full">
 		<!-- Modal content -->
 		<div class="relative bg-white rounded-lg shadow dark:bg-gray-700 antialiased">
 			<div class="flex items-center justify-between p-4 md:p-5 border-b rounded-t dark:border-gray-600">
@@ -156,5 +160,8 @@
 				}
 			</div>
 		</div>
-	</div>
+	</dialog>
+
+	
+
 </div>
