--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -22,9 +22,21 @@
 		</div>
 		<div class="m-auto text-2xl font-semibold">Organize Your Files</div>
 		<div class="my-auto px-6">
-			Hello @User.Identity?.Name
-			<img src="/Public/Avatar.png" alt="CN" width="100" height="100"
-				 class="relative flex h-10 w-10 shrink-0 overflow-hidden rounded-full" />
+			<button id="avatarButton" type="button" popovertarget="userDropdown">
+				<img class="w-10 h-10 rounded-full" src="/Public/Avatar.png" alt="CN" width="100" height="100" />
+			</button>
+
+			<!-- Dropdown menu -->
+			<div popover="manual" id="userDropdown" name="userDropdown" class="z-10 bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700 dark:divide-gray-600">
+				<div class="px-4 py-3 text-sm text-gray-900 dark:text-white">
+					<div>@Model.Account.Username</div>
+				</div>
+				<div class="py-1">
+					<a href="@Url.Action("Logout","Account")" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Sign out</a>
+				</div>
+			</div>
+
+
 		</div>
 	</header>
 
@@ -34,7 +46,7 @@
 				@foreach (var userHost in hosts)
 				{
 					<a key="@userHost.Host" href="@Url.ActionLink("Index", @userHost.Host.ToString())"
-				   class=" text-xl font-semibold hover:bg-slate-600 p-2 hover:cursor-pointer rounded-md active:ring-2 active:bg-slate-600 focus-within:bg-slate-600 focus-within:ring-2 ring-slate-200">
+				   class="text-xl font-semibold hover:bg-slate-600 p-2 hover:cursor-pointer rounded-md active:ring-2 active:bg-slate-600 focus-within:bg-slate-600 focus-within:ring-2 ring-slate-200 group">
 						<div class="flex justify-between">
 							@userHost.Host.ToString()
 							@if (@userHost.Files != null)
