--- a/Views/PCloud/Index.cshtml
+++ b/Views/PCloud/Index.cshtml
@@ -1,160 +1,3 @@
 @model FiDa.ViewModels.BaseViewModel
-@{
-	ViewData["Title"] = "pCloud";
 
-	var fileModel = Model.FileViewModel ?? throw new ArgumentNullException("FileViewModel");
-	var rootFiles = fileModel.RootFiles;
-	var folders = fileModel.Folders;
-
-}
-
-<div class="p-4">
-	<div class="flex items-center space-x-2 pb-4">
-		<span class="text-5xl font-semibold">pCloud</span>
-		<a class="hover:bg-gray-800 p-2 focus:ring-4 focus:outline-none focus:ring-gray-300 font-medium rounded-lg text-sm text-center dark:hover:bg-gray-700 dark:focus:ring-gray-800" id="sync" href="@Url.Action("SyncRepo","pcloud")">
-			<svg fill="currentColor" version="1.1" id="Uploaded to svgrepo.com" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-				 viewBox="0 0 32 32" xml:space="preserve" class="text-white" width="2rem" height="2rem">
-			<path d="M30,16c0,3.279-2.631,5.939-5.896,5.995l-0.629-0.001C23.22,25.905,19.975,29,16,29
-							c-2.464,0-4.634-1.201-6-3.036V27.5c0,0.276-0.224,0.5-0.5,0.5S9,27.776,9,27.5V24h3.5c0.276,0,0.5,0.224,0.5,0.5S12.776,25,12.5,25
-							h-1.955c1.157,1.798,3.162,3,5.455,3c3.418,0,6.222-2.653,6.475-6.008L9.528,21.974C9.515,21.817,9.5,21.66,9.5,21.5
-							c0-3.584,2.916-6.5,6.5-6.5c2.292,0,4.298,1.202,5.454,3H19.5c-0.276,0-0.5,0.224-0.5,0.5s0.224,0.5,0.5,0.5H23v-3.5
-							c0-0.276-0.224-0.5-0.5-0.5S22,15.224,22,15.5v1.528C20.634,15.195,18.462,14,16,14c-4.142,0-7.5,3.358-7.5,7.5
-							c0,0.16,0.01,0.316,0.022,0.473l-0.061,0C4.848,21.697,2,18.684,2,15c0-3.613,2.738-6.585,6.252-6.959C9.127,4.572,12.259,2,16,2
-							c4.418,0,8,3.582,8,8C27.314,10,30,12.686,30,16z" />
-					</svg>
-		</a>
-	</div>
-	<hr class="bg-slate-600 rounded-full h-2" />
-
-	<div class="relative overflow-x-auto py-4">
-		<table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
-			<thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
-				<tr>
-					<th scope="col" class="p-4 max-w-5" />
-					<th scope="col" class="p-4">
-						Filename
-					</th>
-					<th scope="col" class="p-4">
-						Size
-					</th>
-					<th scope="col" class="p-4">
-						Modified
-					</th>
-					<th scope="col" class="p-4">
-						Uploaded
-					</th>
-				</tr>
-			</thead>
-			<tbody>
-				@foreach (var file in rootFiles)
-				{
-					@if (file.IsFolder)
-					{
-						<tr class="border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-600 hover:cursor-pointer" onclick="location.href='@Url.Action("Index", "PCloud", new { id = file.FileId})'">
-							<td class="p-4 max-w-5">
-								<svg fill="currentColor" width="2rem" height="2rem" viewBox="0 0 35 35" version="1.1" xmlns="http://www.w3.org/2000/svg">
-									<title>folder</title>
-									<path d="M8.431 9.155h20.958c2.158 0 2.158-2.238 0.084-2.238h-14.486c-0.83 0-1.244-1.244-1.244-1.244s-0.581-1.825-1.743-1.825h-10.789c-1.576 0-1.162 1.825-1.162 1.825s2.407 20.47 2.573 21.715 1.453 1.612 1.453 1.612l2.821-18.103c0.208-1.327 1.12-1.7 1.535-1.742zM33.658 9.942h-24.563c-0.733 0-1.328 0.594-1.328 1.327l-2.572 16.4c0 0.734 0.595 1.328 1.328 1.328h24.563c0.732 0 1.328-0.594 1.328-1.328l2.572-16.4c0-0.733-0.593-1.327-1.328-1.327z"></path>
-								</svg>
-							</td>
-							<td class="p-4">@Html.DisplayFor(modelitem => file.FileName)</td>
-							<td class="p-4 max-w-2">@Html.DisplayFor(modelitem => file.Size)</td>
-							<td class="p-4 max-w-4">@Html.DisplayFor(modelitem => file.Modified)</td>
-							<td class="p-4 max-w-4">@Html.DisplayFor(modelitem => file.Created)</td>
-						</tr>
-					}
-					else
-					{
-						<tr class="border-b dark:bg-gray-800 dark:border-gray-700">
-							<td class="p-4 max-w-5">
-								<svg fill="currentColor" width="2rem" height="2rem" viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg">
-									<title>file2</title>
-									<path d="M11 15h1v-1h-1v1zM11 18h1v-1h-1v1zM11 12h1v-1h-1v1zM11 21h1v-1h-1v1zM11 24h1v-1h-1v1zM13 18h8v-1h-8v1zM13 12h8v-1h-8v1zM20.938 4h-13.938v24h18v-20l-4.062-4zM23 25.938h-14v-19.938h10v2.938h4v17zM13 21h8v-1h-8v1zM13 15h8v-1h-8v1zM13 24h8v-1h-8v1z"></path>
-								</svg>
-							</td>
-							<td class="p-4">@Html.DisplayFor(modelitem => file.FileName)</td>
-							<td class="p-4 max-w-2">@Html.DisplayFor(modelitem => file.Size)</td>
-							<td class="p-4 max-w-4">@Html.DisplayFor(modelitem => file.Modified)</td>
-							<td class="p-4 max-w-4">@Html.DisplayFor(modelitem => file.Created)</td>
-						</tr>
-					}
-				}
-			</tbody>
-		</table>
-	</div>
-
-	<div class="py-4">
-		<!-- Modal toggle -->
-		<button popovertarget="modal-content" class="block text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
-				type="button">
-			Upload a file!
-		</button>
-		@if (TempData != null && TempData["Errors"] != null)
-		{
-			var errors = (string[])TempData["Errors"]!;
-			foreach (var err in errors)
-			{
-				<p class="p-2 text-red-400 font-semibold">@err</p>
-			}
-		}
-	</div>
-
-	<!-- Main modal -->
-	<div popover="manual" id="modal-content" class="m-auto p-4 w-full max-w-2xl max-h-full">
-		<!-- Modal content -->
-		<div class="relative bg-white rounded-lg shadow dark:bg-gray-700 antialiased">
-			<div class="flex items-center justify-between p-4 md:p-5 border-b rounded-t dark:border-gray-600">
-				<h3 class="text-xl font-semibold text-gray-900 dark:text-white">
-					Upload a File to PCloud
-				</h3>
-				<button popovertargetaction="hide" type="button"
-						class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white">
-					<svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
-						<path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-							  d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6" />
-					</svg>
-					<span class="sr-only">Close modal</span>
-				</button>
-			</div>
-			<!-- Modal body -->
-			<div class="flex items-center justify-center w-full p-4">
-				@using (Html.BeginForm("UploadFile", "pcloud", FormMethod.Post, new
-				{
-					enctype = "multipart/form-data",
-					@class = "w-full"
-				}))
-				{
-					<div class="p-4 space-y-4">
-						<label for="Folder" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Select a Folder</label>
-						<select id="Folder" name="Folder" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
-							<option selected value="0">Root</option>
-							@foreach (var folder in folders)
-							{
-								<option selected value="@folder.FileId">@folder.FileName</option>
-							}
-						</select>
-						<input class="block w-full text-sm font-medium text-gray-900 border border-gray-300 rounded-lg cursor-pointer bg-gray-50 dark:text-gray-400 focus:outline-none dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400"
-						   id="Files" name="Files" type="file" multiple="multiple" required>
-						@if (@ViewBag.Message != null)
-						{
-							<p class="p-2 text-red-400">@ViewBag.Message</p>
-						}
-					</div>
-					<!-- Modal footer -->
-					<div class="flex items-center border-t border-gray-200 rounded-b dark:border-gray-600">
-						<div class="p-4">
-							<button data-modal-hide="default-modal" type="submit"
-								class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
-								Submit File
-							</button>
-							<button popovertargetaction="hide" data-modal-hide="default-modal" type="reset" id="cancel-upload-button"
-								class="py-2.5 px-5 ms-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">
-								Cancel
-							</button>
-						</div>
-					</div>
-				}
-			</div>
-		</div>
-	</div>
-</div>
+@await Component.InvokeAsync("HostView", new { model = Model })
